--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,1 +1,9 @@
-<h1>Welecome to my Awesome Web App</h1>
+<%= @places.each do |place| %>
+	<div>
+		<h1><%= place.name %></h1>
+		<i><%= place.address %></i>
+		<p><%= place.description %></p>
+	</div>
+
+	<hr />
+<% end %>
