--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -1,3 +1,5 @@
+@import url(http://fonts.googleapis.com/css?family=Arimo);
+
 .booyah-box {
   -moz-box-shadow: 1px 1px 2px 0 #d0d0d0;
   -webkit-box-shadow: 1px 1px 2px 0 #d0d0d0;
@@ -24,4 +26,11 @@ body  {
   background: url('/assets/stardust.png');
   border-radius: 0;
   box-shadow: -1px -1px 3px #000000;
+}
+
+.navbar-inverse .navbar-brand  {
+  color: #00cdc8;
+  font-family: "Helvetica Neue", Helvetica, sans-serif;
+  font-family: 'Arimo', sans-serif;
+  font-size: 26px;
 }
