--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -3,4 +3,7 @@
 <i><%= @place.address %></i>
 <br/></br/>
 <p><%= @place.description %></p>
+<div class= "pull-right">
+  <%= link_to "Edit", edit_place_path, :class =>"btn btn-primary" %>
+</div>
 </div>
