--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -34,3 +34,10 @@ body  {
   font-family: 'Arimo', sans-serif;
   font-size: 26px;
 }
+
+.field_with_errors  {
+  color: #ff3333;
+  background-color: #FFEEEE;
+  border-radius: 3px;
+  padding: 8px;
+}
