--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -43,4 +43,17 @@ google.maps.event.addDomListener(window, 'load', initialize);
 		<%= f.input :message %>
 		<%= f.input :rating %>
 		<%= f.submit "Add a Comment", :class => 'btn btn-primary' %>
+<h1>Comments</h1>
+
+<% @place.comments.each do |comment| %>
+	<div>
+		<blockquote>
+			<b><%= comment.rating %></b> - <%= comment.message %>
+			<small><%= comment.user.email %></small>
+		</blockquote>
+</div>
+
+<% end %>
+			
+			
 		<% end %>
