--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -55,10 +55,10 @@ google.maps.event.addDomListener(window, 'load', initialize);
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
         <h4 class="modal-title" id="myModalLabel">Add a comment</h4>
       </div>
-			      <%= simple_form_for @comment, :url => place_comments_path(@place) do |f| %>
+      <%= simple_form_for @comment, :url => place_comments_path(@place) do |f| %>
         <div class="modal-body">
           <%= f.input :message %>
           <%= f.input :rating, :as => :select, :collection => Comment::RATINGS %>
