--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -39,16 +39,6 @@ google.maps.event.addDomListener(window, 'load', initialize);
   </div>
 </div>
 <div class= "clear"></div>
-<%= simple_form_for @comment, :url => place_comments_path(@place) do |f| %>
-		<%= f.input :message %>
-<%= f.input :rating, :as => :select, :collection => Comment::RATINGS %>
-		<%= f.submit "Add a Comment", :class => 'btn btn-primary' %>
-<% end %>
-
-<!-- Button trigger modal -->
-<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
-  Add a comment
-</button>
 
 <!-- Modal -->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -72,10 +62,20 @@ google.maps.event.addDomListener(window, 'load', initialize);
   </div>
 </div>
 
+<div class="col-xs-10 col-xs-offset-1">
+<h1 class="pull-left">Comments</h1>
+<!-- Button trigger modal -->
+<button class="btn btn-primary btn-lg pull-right" data-toggle="modal" data-target="#myModal">
+  Add a comment
+</button>
+</div>
+<div class="clear"></div>
+
+
 <h1>Comments</h1>
 
 <% @place.comments.each do |comment| %>
-	<div>
+	<div class="col-xs-12 col-xs-6">
 		<blockquote>
 			<% if comment.humanized_rating.present? %>
 			<b><%= comment.humanized_rating %></b> -
