--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -40,7 +40,7 @@ google.maps.event.addDomListener(window, 'load', initialize);
 </div>
 <div class= "clear"></div>
 
-<!-- Modal -->
+<!-- Comments Modal -->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -80,6 +80,14 @@ google.maps.event.addDomListener(window, 'load', initialize);
 			<%= comment.message %>
 			<small><%= comment.user.email %></small>
 		</blockquote>
+<% end %>
 </div>
 
+<div class="clear"></div>
+<%= simple_form_for @photo, :url => '#' do |f| %>
+	<%= f.input :caption %>
+<%= f.submit "Add a Photo", :class => 'btn btn-primary' %>
 <% end %>
+
+
+
