--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,18 +1,18 @@
 <div class= "booyah-box col-xs-10 col-xs-offset-1">
   <h1><%= @place.name %></h1>
-  <i><%= @place.address %></i>
-  <br />
+  <i><%= @place.address %></i><br />
   <p><%= @place.description %></p>
 	
 	<% if @place.latitude.present? && @place.longitude.present? %>
 	
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
-    <script>
-function initialize() {
-	var myLatlng = new google.maps.LatLng(<%= @place.latitude %>,<%= @place.longitude %>);
-  var mapOptions = {
-    zoom: 12,
-    center: myLatlng
+    
+	<script>
+			function initialize() {
+			var myLatlng = new google.maps.LatLng(<%= @place.latitude %>,<%= @place.longitude %>);
+			var mapOptions = {
+    	zoom: 12,
+    	center: myLatlng
   }
   var map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
   var marker = new google.maps.Marker({
@@ -22,9 +22,10 @@ function initialize() {
   });
 }
 google.maps.event.addDomListener(window, 'load', initialize);
-    </script>
+	</script>
+	
 	<div id="map-canvas"></div>
-	<% end %>
+<% end %>
 	
 	<br />
 	
@@ -34,21 +35,47 @@ google.maps.event.addDomListener(window, 'load', initialize);
 			<%= link_to "Destroy", place_path(@place), :method => :delete, :data => {:confirm => "Are you sure you want to delete this?"}, 						:class => "btn btn-danger" %>
 			<% end %>
 		</div>
+</div>
+
+<!-- Photo Simple Form -->
+<div class= "booyah-box col-xs-10 col-xs-offset-1">	
 	<div class="clear"></div>
-<%= simple_form_for @photo, :url => place_photos_path(@place) do |f| %>
-	<%= f.input :caption %>
-<%= f.submit "Add a Photo", :class => 'btn btn-primary' %>
+		<% @place.photos.each do |photo| %>
+  <%= image_tag photo.picture %>
+  <% photo%>
 <% end %>
+	
+	<!-- Photo Button trigger modal -->
+<button type="button" class="btn btn-primary btn-lg pull-right" data-toggle="modal" data-target="#myModal2">
+  Add a photo
+</button>
+
+<!-- Photo Modal -->
+<div class="modal fade" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">Add a Photo</h4>
+      </div>
+      <div class="modal-body">
+        <%= simple_form_for @photo, :url => place_photos_path(@place) do |f| %>
+						<%= f.input :picture %><br />
+						<%= f.input :caption %><br />		
+      </div>
+			
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <%= f.submit "Add a Photo", :class => 'btn btn-primary' %>
+      </div>
+			<% end %>
+    </div>
+  </div>
+</div>
+	</div>
 </div>
 
 
-
-
-
-
-
-
-<div class= "clear"></div>
 
 <!-- Comments Modal -->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -58,7 +85,12 @@ google.maps.event.addDomListener(window, 'load', initialize);
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
         <h4 class="modal-title" id="myModalLabel">Add a comment</h4>
       </div>
-      <%= simple_form_for @comment, :url => place_comments_path(@place) do |f| %>
+			
+			<div class= "clear"></div>
+      
+			
+			<!--Comments Simple Form-->
+			<%= simple_form_for @comment, :url => place_comments_path(@place) do |f| %>
         <div class="modal-body">
           <%= f.input :message %>
           <%= f.input :rating, :as => :select, :collection => Comment::RATINGS %>
@@ -72,16 +104,16 @@ google.maps.event.addDomListener(window, 'load', initialize);
   </div>
 </div>
 
+
+
 <div class="col-xs-10 col-xs-offset-1">
-
-	<h1 class="pull-left">Comments</h1>
-
-	
+	<h1 class="pull-left">Comments</h1>	
 	<!-- Button trigger modal -->
-<button class="btn btn-primary btn-lg pull-right" data-toggle="modal" data-target="#myModal">
-  Add a comment
-</button>
+		<button class="btn btn-primary btn-lg pull-right" data-toggle="modal" data-target="#myModal">
+  		Add a comment
+		</button>
 </div>
+
 <div class="clear"></div>
 
 <% @place.comments.each do |comment| %>
