Adjusted the automated email mailer.

--- a/app/views/notification_mailer/comment_added.html.erb
+++ b/app/views/notification_mailer/comment_added.html.erb
@@ -1,6 +1,8 @@
 <p>Hey There!</p>
-<p>Congrats! <b>A comment has been added on sneaker nomster<b>.</p>
-	
-	Aloha,
-	<br />
-	Larry
+<p>
+        Congrats!  <b>A comment has been added on Nomster</b>.
+	Check it out <%= link_to 'here', place_url(@place) %>.
+</p>
+
+Cheers,<br />
+Larry
