--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -72,3 +72,7 @@ blockquote:before {
 blockquote p {
   display: inline;
 }
+
+.carousel-inner > .item > img, .carousel-inner > .item > a > img {
+	height: 550px;
+}
