--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -4,6 +4,7 @@
   <ol class="carousel-indicators">
     <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
     <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+		<li data-target="#carousel-example-generic" data-slide-to="2"></li>
   </ol>
 
   <!-- Wrapper for slides -->
@@ -19,6 +20,13 @@
       <div class="carousel-caption">
         Sneaker Politics in Lafayette
       </div>
+		</div>
+		<div class="item">
+			<%= image_tag 'slider3.jpg' %>
+      <div class="carousel-caption">
+        Wish in Atlanta
+      </div>
+		</div>
   </div>
 
   <!-- Controls -->
