--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -10,19 +10,19 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner" role="listbox">
     <div class="item active">
-			<%= image_tag 'slider1.jpg' %>
+			<%= image_tag 'slider1.jpg', :class => 'img-responsive' %>
       <div class="carousel-caption">
         Vans DQM Opens In SOHO
       </div>
     </div>
     <div class="item">
-			<%= image_tag 'slider2.jpg' %>
+			<%= image_tag 'slider2.jpg', :class => 'img-responsive' %>
       <div class="carousel-caption">
         Sneaker Politics in Lafayette
       </div>
 		</div>
 		<div class="item">
-			<%= image_tag 'slider3.jpg' %>
+			<%= image_tag 'slider3.jpg', :class => 'img-responsive' %>
       <div class="carousel-caption">
         Wish in Atlanta
       </div>
