Added user profile page.

--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -12,7 +12,7 @@
     <div class="item active">
 			<%= image_tag 'slider1.jpg', :class => 'img-responsive' %>
       <div class="carousel-caption">
-        Vans DQM Opens In SOHO
+        Vans DQM in SOHO
       </div>
     </div>
     <div class="item">
