Added comments on the user page and updated the styling

--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -124,5 +124,6 @@ google.maps.event.addDomListener(window, 'load', initialize);
 			<%= comment.message %>
 			<small><%= comment.user.email %></small>
 		</blockquote>
+	</div>
 <% end %>
 </div>
