Updated the styling, removed the html image background

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -18,7 +18,7 @@ h1, h2, h3, h4, h5, h6  {
 }
 
 body  {
-  background: url('/assets/brickwall.png');
+  /*background: url('/assets/brickwall.png');*/
   font-family: Cambria, "Hoefler Text", Utopia, "Liberation Serif", "Nimbus Roman No9 L Regular", Times, "Times New Roman", serif;
 }
 
